created proper directory structure.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backbone",
   "version": "1.0.2",
-  "description": "backbone Project",
+  "description": "Training Project",
   "devDependencies": {
   },
   "dependencies": {
